force-app/main/default/objects/License_Registration__c/fields/Driver_On_Off_Hauling__c.field-meta.xml
<CustomField>
    <fullName>Driver_On_Off_Hauling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PW craft</description>
    <label>Driver (On/Off Hauling)</label>
    <type>Checkbox</type>
</CustomField>