force-app/main/default/objects/License_Registration__c/fields/Drywall_Installer_Lather_Finisher__c.field-meta.xml
<CustomField>
    <fullName>Drywall_Installer_Lather_Finisher__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PW craft</description>
    <label>Drywall Installer/Lather/Finisher</label>
    <type>Checkbox</type>
</CustomField>