force-app/main/default/objects/License_Registration__c/fields/Dup_Found_Proceed__c.field-meta.xml
<CustomField>
    <fullName>Dup_Found_Proceed__c</fullName>
    <description>Answered from the community for public works registrations.</description>
    <label>Dup Found Proceed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>