force-app/main/default/objects/License_Registration__c/fields/E_signature_of_Applicant__c.field-meta.xml
<CustomField>
    <fullName>E_signature_of_Applicant__c</fullName>
    <description>Used in Release Authorization section of form</description>
    <inlineHelpText>Enter full name of owner, partner, or authorized corporate officer.</inlineHelpText>
    <label>E-signature of Applicant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>