force-app/main/default/objects/License_Registration__c/fields/Enter_minor_s_legal_name__c.field-meta.xml
<CustomField>
    <fullName>Enter_minor_s_legal_name__c</fullName>
    <description>EWP and TEWP permits for agreement page</description>
    <inlineHelpText>Enter minor's legal name</inlineHelpText>
    <label>Enter minor's legal name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>