force-app/main/default/objects/License_Registration__c/fields/Enter_Your_Name__c.field-meta.xml
<CustomField>
    <fullName>Enter_Your_Name__c</fullName>
    <label>Enter Your Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>