force-app/main/default/objects/License_Registration__c/fields/Enter_Your_Name_Labor_Code__c.field-meta.xml
<CustomField>
    <fullName>Enter_Your_Name_Labor_Code__c</fullName>
    <inlineHelpText>Enter the full name of the owner,  or authorized corporate officer or partner.</inlineHelpText>
    <label>Enter Your Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>