force-app/main/default/objects/License_Registration__c/fields/EntityNumber__c.field-meta.xml
<CustomField>
    <fullName>EntityNumber__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Entity number recorded with Secretary of State</inlineHelpText>
    <label>Entity Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>