force-app/main/default/objects/License_Registration__c/fields/Exam_Fee_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Exam_Fee_Adjustments__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Exam Fee Adjustments</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>