force-app/main/default/objects/License_Registration__c/fields/Exam_Status__c.field-meta.xml
<CustomField>
    <fullName>Exam_Status__c</fullName>
    <label>Exam Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Exams Needed</fullName>
            </value>
            <value>
                <fullName>Pending Exam</fullName>
            </value>
            <value>
                <fullName>All Exams Completed</fullName>
            </value>
            <value>
                <fullName>Added to PRU</fullName>
            </value>
            <value>
                <fullName>Accommodation Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>