force-app/main/default/objects/License_Registration__c/fields/Exempt_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exempt_Reason__c</fullName>
    <inlineHelpText>Indicate why the business is exempt from Workers' Compensation Insurance</inlineHelpText>
    <label>Exempt Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Owner/Operator</fullName>
            </value>
            <value>
                <fullName>Out of state insurance</fullName>
            </value>
            <value>
                <fullName>Out of state employees only</fullName>
            </value>
            <value>
                <fullName>All employees leased through temp agency or PEO</fullName>
            </value>
            <value>
                <fullName>Business has no (zero) employees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>