force-app/main/default/objects/License_Registration__c/fields/Expiration_Date_WF_Fired__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date_WF_Fired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked as TRUE via workflow rule so that subsequent updates can initiate field change notifications.</description>
    <label>Expiration Date WF Fired?</label>
    <type>Checkbox</type>
</CustomField>