force-app/main/default/objects/License_Registration__c/fields/expiredRegEmailSent__c.field-meta.xml
<CustomField>
    <fullName>expiredRegEmailSent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A flag for expired registration email notification is sent.</description>
    <label>expiredRegEmailSent</label>
    <type>Checkbox</type>
</CustomField>