force-app/main/default/objects/License_Registration__c/fields/External_User__c.field-meta.xml
<CustomField>
    <fullName>External_User__c</fullName>
    <description>True when the user profile is a portal user. This field assists in defining which fields appear on the form.</description>
    <formula>IF( ISPICKVAL($Profile.UserType, 'CspLitePortal'), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>