force-app/main/default/objects/License_Registration__c/fields/Fee_Calculation_Ready__c.field-meta.xml
<CustomField>
    <fullName>Fee_Calculation_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that triggers the creation of fees for the registration. This flag is set by actions taken in the form and used by the fee calculation method on the registration trigger.</description>
    <label>Fee Calculation Ready</label>
    <type>Checkbox</type>
</CustomField>