force-app/main/default/objects/License_Registration__c/fields/FeesDA__c.field-meta.xml
<CustomField>
    <fullName>FeesDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fees DA</label>
    <type>Checkbox</type>
</CustomField>