force-app/main/default/objects/License_Registration__c/fields/Field_Surveyor__c.field-meta.xml
<CustomField>
    <fullName>Field_Surveyor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PW craft</description>
    <label>Field Surveyor</label>
    <type>Checkbox</type>
</CustomField>