force-app/main/default/objects/License_Registration__c/fields/Filing_Fee_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Filing_Fee_Adjustments__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Filing Fee Adjustments</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>