force-app/main/default/objects/License_Registration__c/fields/FLC_Additional_Cards__c.field-meta.xml
<CustomField>
    <fullName>FLC_Additional_Cards__c</fullName>
    <formula>If((FLC_Cards__c  + FLC_Cards_Manager__c) - 1 &lt; 0,0,(FLC_Cards__c  + FLC_Cards_Manager__c) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FLC Additional Cards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>