force-app/main/default/objects/License_Registration__c/fields/FLC_Cards__c.field-meta.xml
<CustomField>
    <fullName>FLC_Cards__c</fullName>
    <description>Sum of all cards requested</description>
    <label>FLC Cards</label>
    <summaryFilterItems>
        <field>Ownership__c.Request_FLC_Card__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Ownership__c.Registration__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>