force-app/main/default/objects/License_Registration__c/fields/FLC_Cards_Manager__c.field-meta.xml
<CustomField>
    <fullName>FLC_Cards_Manager__c</fullName>
    <description>Sum of all cards requested for Manager</description>
    <label>FLC Cards Manager</label>
    <summaryFilterItems>
        <field>Registration_Account__c.Request_FLC_Card__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Registration_Account__c.Registration__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>