force-app/main/default/objects/License_Registration__c/fields/FollowupQuestionsDA__c.field-meta.xml
<CustomField>
    <fullName>FollowupQuestionsDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow up Questions DA</label>
    <type>Checkbox</type>
</CustomField>