force-app/main/default/objects/License_Registration__c/fields/FollowupQuestionsReviewed__c.field-meta.xml
<CustomField>
    <fullName>FollowupQuestionsReviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow up Questions Reviewed?</label>
    <type>Checkbox</type>
</CustomField>