force-app/main/default/objects/License_Registration__c/fields/Function_as_Employee_Leasing_Co__c.field-meta.xml
<CustomField>
    <fullName>Function_as_Employee_Leasing_Co__c</fullName>
    <description>Answered in the workers' comp section defining that the business is an employee leasing company.</description>
    <label>Function as Employee Leasing Co</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>