force-app/main/default/objects/License_Registration__c/fields/Garment_Subsequent_Fees__c.field-meta.xml
<CustomField>
    <fullName>Garment_Subsequent_Fees__c</fullName>
    <description>Used in Garment subsequent process</description>
    <formula>IF(ISBLANK(Initial_Reject_Date__c),0,
    IF(ISPICKVAL(Previously_Denied_Revoked_Suspended__c, 'No'),
       IF (ISPICKVAL(Business_Type__c, 'Manufacturer'),
           CASE( Gross_Sales_for_Manufacturers__c
                ,'$500,000 or less', 750
                ,'$500,001 to $3,000,000', 1000
                ,'$3,000,001 to $7,000,000', 1500
                ,'$7,000,001 or more', 2500
                ,-1
               )
           ,CASE(Gross_Sales_for_Contractors__c
                 ,'$100,000 or less', 250
                 ,'$100,001 to $500,000', 350
                 ,'$500,001 to $1,000,000', 500
                 ,'$1,000,001 or more',1000
                 ,-1
                )
          )
       ,IF (ISPICKVAL(Business_Type__c, 'Manufacturer'),
            CASE(Gross_Sales_Prior_3_Years__c, 'Yes', 2500, 'No', 1500, -1)
            ,CASE(Gross_Sales_Prior_3_Years__c, 'Yes', 1000, 'No', 500, -1)
           )
      )
   
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Garment Subsequent Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>