force-app/main/default/objects/License_Registration__c/fields/General_Building__c.field-meta.xml
<CustomField>
    <fullName>General_Building__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PW craft</description>
    <label>General Building</label>
    <type>Checkbox</type>
</CustomField>