force-app/main/default/objects/License_Registration__c/fields/Glazier__c.field-meta.xml
<CustomField>
    <fullName>Glazier__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PW craft</description>
    <label>Glazier</label>
    <type>Checkbox</type>
</CustomField>