force-app/main/default/objects/License_Registration__c/fields/GPorJV__c.field-meta.xml
<CustomField>
    <fullName>GPorJV__c</fullName>
    <formula>IF(
RecordType.DeveloperName = "Public_Works"
&amp;&amp;
OR(
ISPICKVAL(Company_Type__c, "General Partnership"),
ISPICKVAL(Company_Type__c,  "Joint Venture")),
true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GP or JV</label>
    <type>Checkbox</type>
</CustomField>