force-app/main/default/objects/License_Registration__c/fields/Gross_Sales_for_Contractors__c.field-meta.xml
<CustomField>
    <fullName>Gross_Sales_for_Contractors__c</fullName>
    <description>Used by Garment to collect information on Gross Sales Receipts for the prior 12 Months</description>
    <inlineHelpText>Please select one</inlineHelpText>
    <label>Gross Sales for Contractors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$100,000 or less</fullName>
            </value>
            <value>
                <fullName>$100,001 to $500,000</fullName>
            </value>
            <value>
                <fullName>$500,001 to $1,000,000</fullName>
            </value>
            <value>
                <fullName>$1,000,001 or more</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>