force-app/main/default/objects/License_Registration__c/fields/Gross_Sales_for_Manufacturers__c.field-meta.xml
<CustomField>
    <fullName>Gross_Sales_for_Manufacturers__c</fullName>
    <description>Used by Garment to collect information for Gross Sales Receipts for Manufacturers</description>
    <inlineHelpText>Please select one</inlineHelpText>
    <label>Gross Sales for Manufacturers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$500,000 or less</fullName>
            </value>
            <value>
                <fullName>$500,001 to $3,000,000</fullName>
            </value>
            <value>
                <fullName>$3,000,001 to $7,000,000</fullName>
            </value>
            <value>
                <fullName>$7,000,001 or more</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>