force-app/main/default/objects/License_Registration__c/fields/Have_penalties_been_paid_for__c.field-meta.xml
<CustomField>
    <fullName>Have_penalties_been_paid_for__c</fullName>
    <description>Have penalties been paid for that failure to register?</description>
    <label>Have penalties been paid for?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>