force-app/main/default/objects/License_Registration__c/fields/Have_you_done_any_work__c.field-meta.xml
<CustomField>
    <fullName>Have_you_done_any_work__c</fullName>
    <description>Public works</description>
    <label>Have you done any work?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>