force-app/main/default/objects/License_Registration__c/fields/Have_you_paid_for_it__c.field-meta.xml
<CustomField>
    <fullName>Have_you_paid_for_it__c</fullName>
    <label>Have you paid for it?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>