force-app/main/default/objects/License_Registration__c/fields/Hold_Approval_Stop_Sign__c.field-meta.xml
<CustomField>
    <fullName>Hold_Approval_Stop_Sign__c</fullName>
    <formula>IF(Hold_Approving__c, IMAGE("/servlet/servlet.FileDownload?file=015d000000BD3Vr", "Collections Hold - Stop!", 25, 25) , 'FALSE')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hold Approval Stop Sign</label>
    <type>Text</type>
</CustomField>