force-app/main/default/objects/License_Registration__c/fields/Hold_Approving__c.field-meta.xml
<CustomField>
    <fullName>Hold_Approving__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in All Registration Services record types</description>
    <label>Hold Approving</label>
    <type>Checkbox</type>
</CustomField>