force-app/main/default/objects/License_Registration__c/fields/HonestContractorExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>HonestContractorExpirationDate__c</fullName>
    <label>Honest Contractor Expiration Date</label>
    <type>DateTime</type>
</CustomField>