force-app/main/default/objects/License_Registration__c/fields/HonestContractorLock__c.field-meta.xml
<CustomField>
    <fullName>HonestContractorLock__c</fullName>
    <formula>IF( 
AND( 
RecordType.DeveloperName = "Public_Works", 
HonestContractor__c = false, 
NOT(ISBLANK(VIP_Date_Time_Submitted__c))),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Honest Contractor Lock</label>
    <type>Checkbox</type>
</CustomField>