force-app/main/default/objects/License_Registration__c/fields/I_Acknowledge_Garment_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>I_Acknowledge_Garment_Manufacturer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box to acknowledge if business type Manufacturer is selected for Garment Registration</description>
    <label>I Acknowledge Garment Manufacturer</label>
    <type>Checkbox</type>
</CustomField>