force-app/main/default/objects/License_Registration__c/fields/I_Acknowledge_Labor_Code_Compliance__c.field-meta.xml
<CustomField>
    <fullName>I_Acknowledge_Labor_Code_Compliance__c</fullName>
    <label>I Acknowledge Labor Code Compliance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Bond</fullName>
                <isActive>false</isActive>
                <label>Bond</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>