force-app/main/default/objects/License_Registration__c/fields/I_Agree_YesNo__c.field-meta.xml
<CustomField>
    <fullName>I_Agree_YesNo__c</fullName>
    <label>I Agree</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>