force-app/main/default/objects/License_Registration__c/fields/Information_II_DA__c.field-meta.xml
<CustomField>
    <fullName>Information_II_DA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in FLC for Information section II on vipform tool for External to check mark defect reviewed for the section</description>
    <inlineHelpText>Please check if Defects are corrected</inlineHelpText>
    <label>Information II DA</label>
    <type>Checkbox</type>
</CustomField>