force-app/main/default/objects/License_Registration__c/fields/Information_II_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Information_II_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in conjunction with Information II DA  in FLC for Information II section on vipform tool for to check mark defect reviewed for the section</description>
    <label>Information II Reviewed</label>
    <type>Checkbox</type>
</CustomField>