force-app/main/default/objects/License_Registration__c/fields/InformationIDA__c.field-meta.xml
<CustomField>
    <fullName>InformationIDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Information I DA</label>
    <type>Checkbox</type>
</CustomField>