force-app/main/default/objects/License_Registration__c/fields/Initial_Defect_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Defect_Date__c</fullName>
    <description>The first date that application was placed in "Defect" status.</description>
    <inlineHelpText>The first date that application was placed in "Defect" status.</inlineHelpText>
    <label>Initial Defect Date</label>
    <type>Date</type>
</CustomField>