force-app/main/default/objects/License_Registration__c/fields/Initial_Reject_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Reject_Date__c</fullName>
    <description>Used in Garment Registration for subsequent process</description>
    <inlineHelpText>Initial Reject Date</inlineHelpText>
    <label>Initial Reject Date</label>
    <type>Date</type>
</CustomField>