force-app/main/default/objects/License_Registration__c/fields/Inspector_Field_Soils_Material_Tester__c.field-meta.xml
<CustomField>
    <fullName>Inspector_Field_Soils_Material_Tester__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PW craft</description>
    <label>Inspector/Field Soils,Material Tester</label>
    <type>Checkbox</type>
</CustomField>